--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-feature android:name="android.hardware.sensor.proximity"/>
     <uses-feature android:name="android.hardware.sensor.relative_humidity"/>
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
